<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    
    <!--    Для тулбаров экранов-->
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="set_filters">Настройки фильтрации</string>
    <string name="set_vacancy_place">Выбор места работы</string>
    <string name="set_country">Выбор страны</string>
    <string name="set_region">Выбор региона</string>
    <string name="set_industry">Выбор отрасли</string>
    <string name="vacancy_info">Вакансия</string>
    <string name="favourites">Избранное</string>
    <string name="develop_team">Команда</string>

    <!--    Ошибки-->
    <string name="connection_error">Нет интернета</string>
    <string name="connection_error_1">Проверьте подключение к интернету</string>
    <string name="search_error">Не удалось получить\nсписок вакансий</string>
    <string name="region_search_error">Такого региона нет</string>
    <string name="region_list_error">Не удалось получить\nсписок</string>
    <string name="vacancy_error">Вакансия не найдена или\nудалена</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="server_error_1">Произошла ошибка</string>
    <string name="empty_favourite_list">Список пуст</string>

    <!--    Навигация-->
    <string name="nav_main">Главная</string>
    <string name="nav_favourites">Избранное</string>
    <string name="nav_team">Команда</string>

    <!--    Кнопки-->
    <string name="btn_select">Выбрать</string>
    <string name="btn_apply">Применить</string>
    <string name="btn_reset">Сбросить</string>

    <!--    Команда-->
    <string name="app_team">Над приложением\nработали</string>
    <string name="team_member_one">Борис Мороз</string>
    <string name="team_member_two">Алексей Жуковский</string>
    <string name="team_member_three">Сергей Шаповалов</string>
    <string name="team_member_four">Данил Юферев</string>
    <string name="team_member_five">Денис Михеенко</string>

    <!--    Вакансия-->
    <string name="vacancy_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="vacancy_responsibility">Обязанности</string>
    <string name="vacancy_requirements">Требования</string>
    <string name="vacancy_conditions">Условия</string>
    <string name="vacancy_skills">Ключевые навыки</string>
    <string name="no_salary">Зарплата не указана</string>
    <string name="from_text">от&#160;</string>
    <string name="to_text">до&#160;</string>
    <string name="default_salary_text">Уровень дохода не указан</string>
    <string name="key_skills_new_line">&#160;&#160;&#160;•&#160;&#160;&#160;</string>

    <!--    Для иконок тулбаров-->
    <string name="share">Поделиться</string>
    <string name="like">Добавить в избранное</string>

    <string name="input_search">Введите запрос</string>
    <string name="noSalary">Зарплата не указана</string>
    <string name="noSuchVacancies">Таких вакансий нет</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="type_region">Введите регион</string>
    <string name="no_such_region">Такого региона нет</string>

    <!--    Фильтрация-->
    <string name="work_place_title">Место работы</string>
    <string name="work_place_test">Россия, Москва</string>
    <string name="industry_title">Отрасль</string>
    <string name="industry_test">IT</string>
    <string name="salary_title">Ожидаемая зарплата</string>
    <string name="hint_text">Введите сумму</string>
    <string name="checkbox_title">Не показывать без зарплаты</string>
    <string name="applybutton_text">Применить</string>
    <string name="resetbutton_text">Сбросить</string>

    <!--    Отрасли-->
    <string name="industry_hint_text">Введите отрасль</string>
    <string name="no_industry_placeholder_text">Такой отрасли нет</string>
    <string name="industry_list_error_placeholder_text">Не удалось получить\nсписок</string>
    <string name="industries_item_test_text">Электронно-вычислительная, оптическая, контрольно-измерительная техника, радиоэлектроника, автоматика (продвижение, оптовая торговля)</string>
    <string name="failed_to_get_country_list">Не удалось получить список стран</string>
    <string name="failed_to_get_regions">Не удалось получить список регионов</string>
</resources>
