<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.favorites.FavoritesFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/favourites" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/vacancy_info" />

    <ImageView
        android:id="@+id/favourites_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favourites"
        android:src="@drawable/img_placeholder_favourites_error"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/favourites_placeholder_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_favourite_list"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/favourites_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/ys_display_medium_22"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginTop="@dimen/margin_16" />

</androidx.constraintlayout.widget.ConstraintLayout>
