<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.vacancy.VacancyFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/vacancy_menu"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/vacancy_info"
        android:overScrollMode="never"/>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:indeterminateTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/placeholder_error"
        style="@style/PlaceHolderVacancy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:drawableTopCompat="@drawable/img_placeholder_job_error"
        tools:text="@string/vacancy_error"
        android:visibility="gone" />

    <TextView
        android:id="@+id/placeholder_server"
        style="@style/PlaceHolderVacancy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:drawableTopCompat="@drawable/img_placeholder_job_server_error"
        tools:text="@string/server_error"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="@dimen/width_0"
        android:layout_height="@dimen/height_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_24"
                android:fontFamily="@font/ys_display_bold"
                android:textSize="@dimen/ys_display_bold_32"
                android:textColor="?attr/colorOnSurface"
                android:text="Android-разработчик"
                />

            <TextView
                android:id="@+id/salary_text"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/ys_display_medium_22"
                android:textColor="?attr/colorOnSurface"
                android:text="от 100 000 ₽"
                />

            <LinearLayout
                android:id="@+id/vacancy_card_layout"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:padding="@dimen/padding_16"
                android:orientation="horizontal"
                android:background="@drawable/rounded_corners"
                app:layout_constraintTop_toBottomOf="@id/salary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/vacancy_card_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="?attr/colorSurface"
                    android:padding="@dimen/padding_8"
                    android:src="@drawable/img_job_placeholder" />

                <LinearLayout
                    android:id="@+id/vacancy_card_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vacancy_card_employer_text"
                        style="@style/TextViewMediumVacancy"
                        android:textColor="@color/yp_black"
                        android:textSize="@dimen/ys_display_medium_22"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="Eда"
                        />

                    <TextView
                        android:id="@+id/vacancy_card_region_text"
                        style="@style/TextViewRegularVacancy"
                        android:textColor="@color/yp_black"
                        android:layout_marginTop="0dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="Москва"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/experience_layout"
                style="@style/LinearLayoutVacancy"
                app:layout_constraintTop_toBottomOf="@id/vacancy_card_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_24">

                <TextView
                    style="@style/TextViewMediumVacancy"
                    android:text="@string/vacancy_experience" />
                <TextView
                    android:id="@+id/experience_text"
                    style="@style/TextViewRegularVacancy"
                    android:text="От 1 года до 3 лет" />
            </LinearLayout>

            <TextView
                android:id="@+id/work_format_text"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/experience_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/ys_display_regular"
                android:textSize="@dimen/ys_display_regular_16"
                android:textColor="?attr/colorOnSurface"
                android:text="Полная занятость, Удаленная работа" />

            <TextView
                android:id="@+id/vacancy_description"
                android:layout_width="@dimen/width_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/work_format_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_32"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/ys_display_medium_22"
                android:textColor="?attr/colorOnSurface"
                android:text="@string/vacancy_description" />

            <LinearLayout
                android:id="@+id/responsibility_layout"
                style="@style/LinearLayoutVacancy"
                app:layout_constraintTop_toBottomOf="@id/vacancy_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    style="@style/TextViewMediumVacancy"
                    android:text="@string/vacancy_responsibility" />

                <TextView
                    android:id="@+id/responsibility_text"
                    style="@style/TextViewRegularVacancy"
                    android:text="   •   Разрабатывать новую функциональность приложения
                \n   •   Помогать с интеграцией нашего SDK в другие приложения
                \n   •   Проектировать большие новые модулиПисать UI- и unit-тесты
                \n   •   Следить за работоспособностью сервиса и устранять технический долг" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/requirements_layout"
                style="@style/LinearLayoutVacancy"
                app:layout_constraintTop_toBottomOf="@id/responsibility_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    style="@style/TextViewMediumVacancy"
                    android:text="@string/vacancy_requirements" />

                <TextView
                    android:id="@+id/requirements_text"
                    style="@style/TextViewRegularVacancy"
                    android:text="   •   100% Kotlin
                \n   •   WebRTC
                \n   •   CI по модели Trunk Based Development" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/conditions_layout"
                style="@style/LinearLayoutVacancy"
                app:layout_constraintTop_toBottomOf="@id/requirements_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    style="@style/TextViewMediumVacancy"
                    android:text="@string/vacancy_conditions" />

                <TextView
                    android:id="@+id/conditions_text"
                    style="@style/TextViewRegularVacancy"
                    android:text="   •   сильная команда, с которой можно расти
                \n   •   возможность влиять на процесс и результат
                \n   •   расширенная программа ДМС: стоматология, обследования, вызов врача на дом и многое другое" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/skills_layout"
                style="@style/LinearLayoutVacancy"
                app:layout_constraintTop_toBottomOf="@id/conditions_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    style="@style/TextViewMediumVacancy"
                    android:text="@string/vacancy_skills" />

                <TextView
                    android:id="@+id/skills_text"
                    style="@style/TextViewRegularVacancy"
                    android:text="   •   Знание классических алгоритмов и структуры данных
                \n   •   Программирование для Android больше одного года
                \n   •   Знание WebRTC" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
