<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.industry.IndustryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/set_industry" />

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="0dp"
        android:layout_height="56dp"

        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_16"
        android:background="@drawable/rounded_item"

        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <EditText
            android:id="@+id/industry_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginLeft="@dimen/margin_16"

            android:layout_weight="1"

            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/industry_hint_text"

            android:imeOptions="actionNext"

            android:inputType="text"
            android:maxLines="1"

            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textCursorDrawable="@drawable/ic_cursor"
            android:textSize="@dimen/ys_display_regular_16" />

        <ImageView
            android:id="@+id/clear_or_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginRight="@dimen/margin_16"

            android:src="@drawable/ic_search"
            android:visibility="visible"
            tools:visibility="visible" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industriesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_16"
        app:layout_constraintBottom_toTopOf="@id/buttonApply"
        app:layout_constraintTop_toBottomOf="@id/search_layout"

        android:visibility="visible"

        tools:listitem="@layout/industry_item" />

    <LinearLayout
        android:id="@+id/no_industry_found_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/img_placeholder_search_error"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16"

            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"

            android:singleLine="true"
            android:text="@string/no_industry_placeholder_text"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/ys_display_medium_22"
            android:visibility="visible"
            tools:visibility="visible"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/get_industries_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/img_placeholder_region_error"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16"

            android:fontFamily="@font/ys_display_medium"
            android:maxLines="2"

            android:gravity="center"

            android:singleLine="false"
            android:text="@string/industry_list_error_placeholder_text"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/ys_display_medium_22"
            android:visibility="visible"
            tools:visibility="visible"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApply"

        android:layout_width="0dp"
        android:layout_height="59dp"

        android:layout_marginHorizontal="@dimen/margin_17"
        android:layout_marginBottom="@dimen/margin_24"

        android:background="@drawable/applybutton_background"

        android:enabled="true"

        android:fontFamily="@font/ys_display_medium"
        android:text="Выбрать"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/ys_display_medium_16"

        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
